# rust-cosmic-cults

./: .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RUST_STANDARDS.md  Trunk.toml  WASM_DEMO.md  cosmic-cults.toml  cosmic-cults.yaml  index.html  package.json  pyproject.toml  render.yaml  rustfmt.toml
.cursor/: .dockerignore  .hadolint.yaml  Dockerfile  README.md  setup.sh
.cursor/rules/: 01-pr-workflow.mdc  cosmic-dominion.mdc  releases.mdc  rust.mdc
.github/: copilot-instructions.md  settings.yml
.github/workflows/: auto-assign.yml  auto-merge.yml  ci.yml  docs.yml  nightly-improve.yml  ollama-pr-review.yml  project-sync.yml  publish-binaries.yml  release.yml  wasm-demo.yml
bevy-ai-toolkit/: Cargo.toml
bevy-ai-toolkit/src/: behavior_tree.rs  lib.rs  state_machine.rs  targeting.rs  utility_ai.rs
bevy-combat/: Cargo.toml
bevy-combat/src/: components.rs  damage.rs  effects.rs  lib.rs  physics_integration.rs  states.rs  targeting.rs
cosmic-cults/: Cargo.toml
cosmic-cults/examples/: README.md  basic_physics.rs  formations.rs  unit_spawning.rs
cosmic-cults/src/: lib.rs  main.rs
cosmic-cults/src/ai/: behaviors.rs  cult_profiles.rs  decision.rs  game_behaviors.rs  integration_test.rs  mod.rs  states.rs  targeting.rs  types.rs
cosmic-cults/src/ai/systems/: ai_execution.rs  decision_making.rs  mod.rs
cosmic-cults/src/assets/: mod.rs  models.rs
cosmic-cults/src/combat/: mod.rs  visuals.rs  xp.rs
cosmic-cults/src/units/: ai.rs  combat.rs  components.rs  formations.rs  hud.rs  leadership.rs  mod.rs  pathfinding_integration.rs  physics_integration.rs  selection.rs  spawning.rs  visuals.rs
cosmic-cults/src/world/: fog.rs  map.rs  mod.rs  spawning.rs
docs/: SAVE_LOAD.md  conf.py  index.rst  pathfinding.md
game-ai/: Cargo.toml  README.md
game-ai/src/: behaviors.rs  cult_profiles.rs  decision.rs  integration_test.rs  lib.rs  states.rs  targeting.rs  types.rs
game-ai/src/systems/: ai_execution.rs  behavior_tree.rs  decision_making.rs  mod.rs  state_machine.rs  utility_ai.rs
game-assets/: Cargo.toml  MIGRATION.md  README.md
game-assets/src/: lib.rs  registry.rs
game-audio/: Cargo.toml
game-audio/src/: events.rs  lib.rs  resources.rs  systems.rs
game-combat/: Cargo.toml
game-combat/src/: components.rs  damage.rs  effects.rs  lib.rs  physics_integration.rs  plugin.rs  states.rs  systems.rs  targeting.rs  visuals.rs  xp.rs
game-physics/: Cargo.toml
game-physics/src/: collision.rs  components.rs  lib.rs  movement.rs  spatial.rs
game-runner/: Cargo.toml
game-runner/examples/: README.md  basic_physics.rs  collision_avoidance_test.rs  fog_of_war.rs
game-runner/src/: main.rs
game-ui/: Cargo.toml
game-ui/src/: build_menu.rs  hud.rs  lib.rs  minimap.rs
game-units/: Cargo.toml
game-units/src/: components.rs  formations.rs  leadership.rs  lib.rs  pathfinding_integration.rs  physics_integration.rs  selection.rs  spawning.rs  visuals.rs
game-world/: Cargo.toml
game-world/examples/: save_load_demo.rs
game-world/src/: fog.rs  lib.rs  map.rs  save_load.rs  spawning.rs  terrain.rs
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md
