[workspace]
members = ["game-physics", "game-assets", "game-world", "game-units", "game-combat", "game-ai", "game-runner"]
resolver = "2"

[workspace.package]
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-cosmic-cults"
homepage = "https://github.com/jbcom/rust-cosmic-cults"
documentation = "https://github.com/jbcom/rust-cosmic-cults"
keywords = ["game", "rts", "lovecraft", "bevy", "wasm"]
categories = ["games", "wasm"]

[workspace.dependencies]
# Core Bevy engine - latest stable
bevy = { version = "0.17", default-features = false }
avian3d = "0.4"

# AI/Game Logic - USE THESE INSTEAD OF CUSTOM IMPLEMENTATIONS
# big-brain 0.23 (Bevy 0.17) not on crates.io yet - use git
big-brain = { git = "https://github.com/zkat/big-brain.git", tag = "v0.23.0" }
seldom_state = "0.15"        # State machines (replaces custom states.rs)
bevy_behave = "0.4"          # Behavior trees (replaces custom behaviors.rs)

# RNG with proper WASM support
bevy_rand = { version = "0.12", features = ["wyrand"] }
bevy_prng = { version = "0.12", features = ["wyrand"] }
rand_core = "0.9"

# Math and utilities
glam = "0.30"
smallvec = "1.15"
ahash = "0.8"
indexmap = "2.11"
rand = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Web support
wasm-bindgen = "0.2"
web-sys = "0.3"
