[workspace]
members = ["bevy-ai-toolkit", "bevy-combat", "cosmic-cults", "game-physics", "game-assets", "game-world", "game-units"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-cosmic-cults"
homepage = "https://github.com/jbcom/rust-cosmic-cults"
documentation = "https://github.com/jbcom/rust-cosmic-cults"
keywords = ["game", "rts", "lovecraft", "bevy", "wasm"]
categories = ["games", "wasm"]

[workspace.dependencies]
# Core Bevy engine - latest stable
bevy = { version = "0.17", default-features = false }
avian3d = "0.4"
# bevy_rapier3d = "0.32"
bevy_rand = "0.8"

# Math and utilities
glam = "0.30"
smallvec = "1.15"
ahash = "0.8"
indexmap = "2.11"
rand = "0.9"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Web support
wasm-bindgen = "0.2"
web-sys = "0.3"
