[package]
name = "bevy-ai-toolkit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic AI systems for Bevy: state machines, behavior trees, utility AI, and targeting"
readme = "README.md"

[dependencies]
# Core Bevy engine (minimal features for AI systems)
bevy = { workspace = true, default-features = false, features = ["bevy_state"] }

# Math and utilities
glam.workspace = true
smallvec.workspace = true

# Serialization for AI state persistence
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }

[features]
default = []

# Optional features for extended functionality
wasm = []
