[package]
name = "bevy-combat"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic combat systems for Bevy: damage, effects, and targeting"
readme = "README.md"

[dependencies]
# Core Bevy engine
bevy = { workspace = true, features = ["bevy_state"] }

# Math and utilities
glam.workspace = true
smallvec.workspace = true

# Serialization for combat state persistence
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[features]
default = []
wasm = []
