[package]
name = "cosmic-cults"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Warcraft meets Cthulhu old-school RTS"

[dependencies]
bevy = { workspace = true, features = ["bevy_state", "bevy_render", "bevy_pbr", "bevy_gizmos"] }
bevy-ai-toolkit = { path = "../bevy-ai-toolkit" }
bevy-combat = { path = "../bevy-combat" }
game-physics = { path = "../game-physics" }
game-assets = { path = "../game-assets" }
game-world = { path = "../game-world" }
game-units = { path = "../game-units" }

# Math and utilities
glam = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
