[package]
name = "cosmic-cults"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy-combat = { path = "../bevy-combat" }
bevy-ai-toolkit = { path = "../bevy-ai-toolkit" }
game-physics = { path = "../game-physics" }

# AI and Game logic dependencies
glam = { workspace = true }
smallvec = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
tracing = "0.1"
bincode = { workspace = true }

[features]
web = []

[[example]]
name = "basic_physics"
path = "examples/basic_physics.rs"

[[example]]
name = "unit_spawning"
path = "examples/unit_spawning.rs"

[[example]]
name = "formations"
path = "examples/formations.rs"
