[package]
name = "cosmic-cults"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core engine
bevy = { version = "0.16", features = ["bevy_render", "bevy_pbr", "bevy_gltf", "bevy_scene", "bevy_color", "bevy_asset", "bevy_gizmos", "bevy_state", "bevy_ui", "bevy_picking"] }

# Ecosystem crates for RTS functionality
bevy_rts_camera = "0.12"
leafwing-input-manager = "0.19"
bevy_egui = "0.34"
avian3d = "0.4"
big-brain = "0.22"

# Math and utilities
glam = "0.30"
smallvec = "1.15"
ahash = "0.8"
indexmap = "2.11"
rand = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"

# Web support
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[features]
web = []

[[example]]
name = "basic_physics"
path = "examples/basic_physics.rs"

[[example]]
name = "unit_spawning"
path = "examples/unit_spawning.rs"

[[example]]
name = "formations"
path = "examples/formations.rs"
