[package]
name = "game-ai"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core Bevy engine (minimal features for AI systems)
bevy = { workspace = true, default-features = false }

# Game physics integration for movement and collision
game-physics = { path = "../game-physics" }

# Game units integration for unit coordination
game-units = { path = "../game-units" }

# Math and utilities
glam.workspace = true
smallvec.workspace = true
ahash.workspace = true

# Serialization for AI state persistence
serde = { workspace = true, features = ["derive"] }

# Web support for logging (when compiled for wasm)
web-sys = { workspace = true, features = ["console"], optional = true }

# Randomization for AI behaviors
rand.workspace = true

[features]
default = []
web = ["web-sys"]
