[package]
name = "game-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bevy = { workspace = true, features = ["bevy_asset"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
