[package]
name = "game-assets"
version = "0.1.0"
edition = "2024"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-cosmic-cults"

[dependencies]
bevy = { workspace = true, default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_render", "bevy_pbr"] }
serde = { workspace = true, features = ["derive"] }
