[package]
name = "game-combat"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["combat", "rts", "game", "bevy"]
categories = ["game-engines"]

[dependencies]
# Core dependencies from workspace
bevy = { workspace = true, features = [
    "bevy_render",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "bevy_color",
    "bevy_asset",
    "bevy_gizmos"
]}
avian3d = { workspace = true }
game-physics = { path = "../game-physics" }

# Math and utilities
glam = { workspace = true }
rand = { workspace = true }
ahash = { workspace = true }

# Proper RNG for WASM compatibility
bevy_rand = { workspace = true }
bevy_prng = { workspace = true }
rand_core = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
tracing = "0.1"

# Web support
web-sys = { workspace = true, features = ["console"] }
wasm-bindgen = { workspace = true }
