[package]
name = "game-physics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core Bevy engine with minimal features needed for ECS physics
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset"
]}

# Physics engine
bevy_rapier3d = { workspace = true, optional = true }

# Math and utilities
glam = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }

# Serialization
serde = { workspace = true }

# Web support
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[features]
default = []
rapier = ["bevy_rapier3d"]
