[package]
name = "game-physics"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core Bevy engine
bevy = { workspace = true, features = ["bevy_asset"] }

# Physics engine
avian3d = { workspace = true }

# Math and utilities
glam.workspace = true
ahash.workspace = true
smallvec.workspace = true

# Serialization
serde = { workspace = true }
tracing = { workspace = true }

# Web support
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[features]
default = []
