[package]
name = "game-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
game-physics = { path = "../game-physics" }
game-assets = { path = "../game-assets" }
game-world = { path = "../game-world" }
game-units = { path = "../game-units" }
game-combat = { path = "../game-combat" }
game-ai = { path = "../game-ai" }
avian3d = { workspace = true }

# Additional dependencies for examples
rand = { workspace = true }

[[example]]
name = "basic_physics"
path = "examples/basic_physics.rs"

[[example]]
name = "unit_spawning"
path = "examples/unit_spawning.rs"

[[example]]
name = "formations"
path = "examples/formations.rs"

[[example]]
name = "collision_avoidance_test"
path = "examples/collision_avoidance_test.rs"
